-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.10.0
-
None
-
CentOS 7.3
-
3
-
9223372036854775807
Secure RPC rules are being ignored due to an issue introduced by commit 0308951e8bba1663bc9495eee2f6ae631e6bcbd0 for LU-9034. When mounting Lustre resources, clients and servers log the following messages when secure RPC rules are set:
{{LustreError: 2696:0:(obd_config.c:1258:class_process_config()) no device for: lustre-ffff880078dd9e70
Lustre: 2696:0:(obd_config.c:1311:class_process_config()) Ignoring error -22 on optional command 0xce016}}
For my tests I set the following rules:
lustre.srpc.flavor.tcp.cli2mdt=ski
lustre.srpc.flavor.tcp.cli2ost=ski
then:
lustre.srpc.flavor.tcp.cli2mdt=krb5p
lustre.srpc.flavor.tcp.cli2ost=krb5p
All resources mount fine but cli2mdt and cli2ost connections aren't secured, they default to null.